# controllers/users.js
@@ -5,16 +5,15 @@ const models = require('../models');
 // INDEX
 users.get('/', (req, res) => {
     models.User.findAll()
-      .then(users => {
-        res.json(users)
-        .catch(function (err) {
-          return res.status(400).json({ message: "Failed to show users" });
+        .then(users => {
+            res.json(users)
+        }).catch(function (err) {
+            return res.status(400).json({ message: "Failed to show users" });;
         });
-      });
-  });
+});
 
-  // SHOW
-    users.get('/:id', (req, res) => {
+// SHOW
+users.get('/:id', (req, res) => {
     models.User.findById(req.params.id)
         .then(user => {
             if (!user) {
@@ -25,16 +24,16 @@ users.get('/', (req, res) => {
             return res.status(400).json({ message: err.message });
         });
 });
-  
-  // CREATE
-  users.post('/', (req, res) => {
+
+// CREATE
+users.post('/', (req, res) => {
     models.User.create({
-      firstName: req.body.firstName,
-      lastName: req.body.lastName,
-      email: req.body.email,
-      passwordHash: req.body.passwordHash,
-      role: req.body.role,
-      lastLogin: req.body.lastLogin
+        firstName: req.body.firstName,
+        lastName: req.body.lastName,
+        email: req.body.email,
+        passwordHash: req.body.passwordHash,
+        role: req.body.role,
+        lastLogin: req.body.lastLogin
     }).then(user => {
         return res.json(user)
     }).catch(err => {
@@ -44,29 +43,30 @@ users.get('/', (req, res) => {
 
 });
 
-  // UPDATE
+// UPDATE
 users.put('/:id', (req, res) => {
-  const params = {
-    firstName: req.body.firstName,
-    lastName: req.body.lastName,
-    email: req.body.email,
-    passwordHash: req.body.passwordHash,
-    role: req.body.role,
-    lastLogin: req.body.lastLogin
-  };
+    const params = {
+        firstName: req.body.firstName,
+        lastName: req.body.lastName,
+        email: req.body.email,
+        passwordHash: req.body.passwordHash,
+        role: req.body.role,
+        lastLogin: req.body.lastLogin
+    };
 
     models.User.update(params,
-      {where: {id: req.params.id}
-      })
-      .then(user => {
-        res.json(user)        
+        {
+            where: { id: req.params.id }
+        })
+        .then(user => {
+            res.json(user)
         }).catch(err => {
-          return res.status(400).json({ message: "Failed to update user" });;
-      });
-  });
+            return res.status(400).json({ message: "Failed to update user" });;
+        });
+});
 
-  // DELETE
-  users.delete('/:id', (req, res) => {
+// DELETE
+users.delete('/:id', (req, res) => {
     models.User.destroy({
         where: { id: req.params.id }
     }).then(user => {
@@ -79,4 +79,4 @@ users.put('/:id', (req, res) => {
     });
 });
 
-  module.exports = users;
+module.exports = users;
